# gpredomicspy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/gpredomicspy/: __init__.py  clinical.py
src/: lib.rs
tests/: test_basic.py
