[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gpredomicspy"
version = "0.1.0"
description = "Python bindings for gpredomics: sparse interpretable ML models"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.8"
authors = [
    { name = "Edi Prifti", email = "edi.prifti@ird.fr" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5", "plotly>=5.0"]
sklearn = ["scikit-learn>=1.0"]
all = ["matplotlib>=3.5", "plotly>=5.0", "scikit-learn>=1.0"]
dev = ["pytest>=7.0", "matplotlib>=3.5", "plotly>=5.0", "scikit-learn>=1.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "gpredomicspy._core"
